fixed issue when Grid Field within Fluid Field gets cut off

--- a/cp-styles/app/styles/components/_fieldsets.scss
+++ b/cp-styles/app/styles/components/_fieldsets.scss
@@ -53,6 +53,7 @@ fieldset {
 
     // margin-bottom: 25px;
 	border: 0;
+	min-width: 0;
 
 	&.last {
 		margin-bottom: 0;;
